# Study

./: .gitignore  Makefile.am  README  README.md  configure.ac
src/: .gitignore  Makefile.am  bits.c  bits.h  bitwise.c  bitwise.h  cntbits.c  cntbits.h  date.c  date.h  main.c  main_bitwise.c  usage.c  usage.h
test/: .gitignore  Makefile.am  test.h  test_bits.c  test_bitwise.c  test_main.c
