
# Tell the linker to omit references to unused shared libraries.
AM_LDFLAGS = $(IGNORE_UNUSED_LIBRARIES_CFLAGS)

bin_PROGRAMS = bitwise
bitwise_SOURCES = main_bitwise.c \
    bitwise.c      \
    date.c         \
    cntbits.c      \
    usage.c        \
noinst_HEADERS = bitwise.h date.h cntbits.h usage.h
